# capa-rs

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  demo.tape  justfile
.github/: dependabot.yml
crates/capa-backend/: Cargo.toml  build.rs
crates/capa-backend/src/: dotnet_extractor.rs  extractor.rs  hashing.rs  helpers.rs  ida_extractor.rs  ida_lifter.rs  ida_loader.rs  lib.rs  lifter.rs  loader.rs  strings.rs
crates/capa-backend/tests/: test_extractor_hashing.rs  test_helpers.rs  test_loader.rs  test_strings.rs
crates/capa-cli/: Cargo.toml  build.rs
crates/capa-cli/src/: main.rs
crates/capa-core/: Cargo.toml
crates/capa-core/src/: error.rs  lib.rs
crates/capa-core/src/feature/: extractor.rs  mod.rs  types.rs
crates/capa-core/src/matcher/: engine.rs  mod.rs
crates/capa-core/src/output/: json.rs  mod.rs
crates/capa-core/src/rule/: mod.rs  parser.rs  types.rs  validation.rs
crates/capa-core/tests/: test_capabilities.rs  test_engine.rs  test_match.rs  test_output.rs  test_rule_features.rs  test_rules.rs  test_rules_extended.rs  test_rules_insn_scope.rs  test_serialization.rs
crates/dotscope/: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md
crates/dotscope/benches/: cilassemblyview.rs  cilobject.rs  cor20.rs  method_body.rs  resources.rs  security.rs  signatures.rs  streams.rs
crates/dotscope/examples/: README.md  basic.rs  comprehensive.rs  disassembly.rs  injectcode.rs  lowlevel.rs  metadata.rs  method_analysis.rs  modify.rs  project_loader.rs  raw_assembly_view.rs  types.rs
crates/dotscope/fuzz/: Cargo.toml
crates/dotscope/fuzz/fuzz_targets/: cilobject.rs
crates/dotscope/src/: error.rs  lib.rs  prelude.rs
crates/dotscope/src/assembly/: builder.rs  encoder.rs
crates/dotscope/src/cilassembly/: builder.rs  mod.rs  modifications.rs  operation.rs  resolver.rs
crates/dotscope/src/cilassembly/builders/: class.rs  enums.rs  event.rs  interface.rs  method.rs  method_body.rs  mod.rs  property.rs
crates/dotscope/src/cilassembly/changes/: assembly.rs  heap.rs  mod.rs
crates/dotscope/src/cilassembly/remapping/: index.rs  mod.rs
crates/dotscope/src/cilassembly/writer/: executor.rs  mod.rs  output.rs
crates/dotscope/src/cilassembly/writer/heaps/: blob.rs  guid.rs  string.rs  userstring.rs
crates/dotscope/src/cilassembly/writer/layout/: heaps.rs  mod.rs  planner.rs  region.rs  tables.rs
crates/dotscope/src/cilassembly/writer/operations/: mod.rs
crates/dotscope/src/file/: memory.rs  mod.rs  parser.rs  pe.rs  physical.rs
crates/dotscope/src/metadata/: cilassemblyview.rs  cilobject.rs  cor20header.rs  mod.rs  root.rs  sequencepoints.rs  token.rs
crates/dotscope/src/metadata/customattributes/: encoder.rs  mod.rs  parser.rs  types.rs
crates/dotscope/src/metadata/customdebuginformation/: mod.rs  parser.rs  types.rs
crates/dotscope/src/metadata/dependencies/: analyzer.rs  graph.rs  mod.rs  types.rs
crates/dotscope/src/metadata/exports/: builder.rs  cil.rs  container.rs  native.rs
crates/dotscope/src/metadata/identity/: assembly.rs  cryptographic.rs  mod.rs
crates/dotscope/src/metadata/imports/: builder.rs  cil.rs  container.rs  native.rs
crates/dotscope/src/metadata/importscope/: mod.rs  parser.rs  types.rs
crates/dotscope/src/metadata/loader/: context.rs  data.rs  graph.rs  inheritance.rs  mod.rs
crates/dotscope/src/metadata/marshalling/: encoder.rs  parser.rs  types.rs
crates/dotscope/src/metadata/method/: body.rs  encode.rs  exceptions.rs  iter.rs  mod.rs  types.rs
crates/dotscope/src/metadata/resources/: encoder.rs  mod.rs  parser.rs  types.rs
crates/dotscope/src/metadata/security/: encoder.rs  mod.rs  namedargument.rs  permission.rs  permissionset.rs  types.rs
crates/dotscope/src/metadata/signatures/: builders.rs  encoders.rs  parser.rs  types.rs
crates/dotscope/src/metadata/streams/: mod.rs  streamheader.rs  strings.rs  tablesheader.rs  userstrings.rs
crates/dotscope/src/metadata/tables/assembly/: builder.rs  loader.rs  mod.rs
crates/dotscope/src/metadata/tables/assemblyos/: builder.rs  loader.rs
crates/dotscope/src/metadata/tables/assemblyprocessor/: builder.rs  loader.rs
crates/dotscope/src/metadata/tables/assemblyref/: assemblyrefhash.rs  builder.rs  loader.rs  owned.rs
crates/dotscope/src/metadata/tables/assemblyrefos/: builder.rs  loader.rs
crates/dotscope/src/metadata/tables/assemblyrefprocessor/: builder.rs  loader.rs
crates/dotscope/src/metadata/tables/classlayout/: builder.rs  loader.rs  owned.rs
crates/dotscope/src/metadata/tables/constant/: builder.rs  loader.rs
crates/dotscope/src/metadata/tables/customattribute/: builder.rs  loader.rs  raw.rs
crates/dotscope/src/metadata/tables/customdebuginformation/: builder.rs  loader.rs
crates/dotscope/src/metadata/tables/declsecurity/: builder.rs  loader.rs
crates/dotscope/src/metadata/tables/document/: builder.rs  loader.rs
crates/dotscope/src/metadata/tables/enclog/: builder.rs  loader.rs
crates/dotscope/src/metadata/tables/encmap/: builder.rs  loader.rs
crates/dotscope/src/metadata/typesystem/: base.rs  builder.rs  encoder.rs  hash.rs  mod.rs  primitives.rs  registry.rs  resolver.rs
crates/dotscope/src/metadata/validation/: config.rs  context.rs  engine.rs  result.rs  scanner.rs  traits.rs
crates/dotscope/src/project/: context.rs  loader.rs  mod.rs  result.rs
crates/dotscope/src/test/: crafted2.rs  mod.rs  validator.rs
crates/dotscope/src/test/builders/: methods.rs  params.rs
crates/dotscope/src/test/helpers/: dependencies.rs  mod.rs
crates/dotscope/src/test/mono/: capabilities.rs  compilation.rs  disassembly.rs  execution.rs  mod.rs  reflection.rs  runner.rs
crates/dotscope/src/utils/: alignment.rs  compression.rs  enums.rs  heap_calc.rs  io.rs  mod.rs  synchronization.rs
crates/dotscope/tests/: README.md  builders.rs  fuzzer.rs  modify_add.rs  modify_basic.rs  modify_heaps.rs  modify_impexp.rs  modify_roundtrips_crafted2.rs  modify_roundtrips_method.rs  modify_roundtrips_wbdll.rs  mono.rs
demos/: dotnet.tape  (+10 more)
(+208 files in other folders)
