[package]
name = "capa-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for CAPA rule parsing, matching, and output"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
fancy-regex = { workspace = true }
aho-corasick = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
